styles/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Quicksand", sans-serif;
}

section {
  background-color: white;
  border: solid black 1px;
}

.subtext {
  font-size: 15px;
  font-weight: 800;
}

.projectSection {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.hero {
  background-color: #1a1c2e;
  height: 100vh;
  color: white;
  font-size: 40px;
}

nav {
  display: flex;
  justify-content: space-between;
}

nav a {
  color: rgb(255, 94, 0);
  text-decoration: none;
}

nav a:hover {
  text-decoration: underline;
  color: rgb(255, 168, 118);
}

.navItems {
  display: flex;
  justify-content: space-evenly;
  font-size: 20px;
  gap: 2rem;
  margin: 15px;
  width: 100%;
}

ul.show {
  display: block;
}

.navItems li {
  list-style-type: none;
  text-decoration: none;
}

footer {
  height: 500px;
  background-color: black;
  color: white;
  border: black 1px solid;
  text-align: center;
  padding: 40px;
}

h1 {
  font-size: 60px;
  margin: 0;
}

h2 {
  font-size: 50px;
  margin: 15px 0;
}

hr {
  color: black;
  background-color: black;
  border: 1px solid black;
  margin: 5px 0;
}

.homepageSubText {
  font-size: 40px;
}

.heroArea {
  display: flex;
  height: 100%;
  justify-content: space-between;
  align-items: center;
  width: 80%;
}

.heroText {
  margin-left: 40px;
  margin-bottom: 200px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 1rem;
}

.txt-type {
  font-size: 35px;
}

.txt-type > .txt {
  border-right: 0.1rem solid rgb(255, 94, 0);
  color: rgb(255, 94, 0);
}

.webDevImg {
  width: 45%;
  height: 45%;
  position: relative;
  bottom: 10%;
  left: 8%;
}

.labImg {
  width: 45%;
  height: 45%;
  position: relative;
  bottom: 10%;
}

.socials {
  margin-bottom: 200px;
  margin-right: 20px;
  background-color: #caa7a7;
  color: #12152e;
  border-radius: 10px;
  padding: 0.4vw;
  width: clamp(70px, 5vw, 5vw);
  position: absolute;
  right: 0;
}

.icons {
  width: 100%;
  padding: 3px;
}

@media only screen and (max-width: 1500px) {
  .heroArea {
    flex-wrap: wrap;
  }

  .heroText {
    flex: 1 0 100%;
    text-align: center;
    position: relative;
    top: 5%;
  }

  .webDevImg {
    bottom: 15%;
  }

  .labImg {
    bottom: 15%;
  }

  .socials {
    right: -20%;
    bottom: ;
  }
}

@media only screen and (max-width: 700px) {
  .navItems {
    flex-wrap: wrap;
    font-size: 3vw;
  }

  .webDevImg {
    display: none;
  }

  .labImg {
    display: none;
  }

  .heroArea {
    flex-wrap: wrap;
    margin-right: 0;
    width: 100%;
  }

  .heroText {
    gap: 5vh;
    margin-left: 0;
  }

  .socials {
    position: static;
    align-self: center;
    margin-right: 0;
    display: flex;
    width: 150px;
    height: 78px;
  }
}

@media only screen and (max-height: 700px) {
  .webDevImg {
    display: none;
  }

  .labImg {
    display: none;
  }
}

.logo {
  color: rgb(255, 94, 0);

  font-size: 60px;
  font-family: "Courgette", cursive;
  margin-left: 20px;
}

.gitHubIcon:hover {
  fill: #7c0d0d;
}

.linkedinIcon:hover {
  fill: #7c0d0d;
}

.aboutMe {
  display: flex;
  justify-content: space-around;
  padding: 20px;
}

.aboutMeText {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  height: 100%;
  padding: 10px;
  font-size: 20px;
  gap: 2rem;
}

.aboutMeText h2 {
  margin: 0;
  text-align: center;
}

.ppImage {
  border-radius: 60px;
  width: 200px;
}

#profilePicNarrow {
  display: none;
}

@media only screen and (max-width: 835px) {
  #profilePicNarrow {
    display: block;
    margin: auto;
  }

  #profilePicWide {
    display: none;
  }
}

.skillsContainer {
  align-self: center;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 80%;
  gap: 1rem;
  margin: 0 0 20px 0px;
}

.skillsContainer h3 {
  flex-basis: 100%;
  text-align: center;
  padding: 20px;
}

.skillsContainer .additionalSkillsHeader {
  border-top: black 1px solid;
}

.skillImg {
  min-height: 40px;
  height: 10%;
  max-height: 70px;
  min-width: 40px;
  width: 10%;
  max-width: 70px;
}

.skillImgNode {
  position: relative;
  top: 12px;
}

/* Project Card Section */

.projectsContainer {
  display: flex;
  justify-content: space-around;
}

.project-link {
  text-decoration: none;
  color: #12152e;
}

.projectCard > p {
  padding-bottom: 10px;
  font-weight: 500;
}

.projectCard > p > span {
  font-weight: 900;
}

.projectCardBottom {
  position: relative;
}

.projectCardBottom .viewProjectText {
  position: absolute;
  left: 50px;
  top: 20px;
  font-size: 20px;
  font-weight: bold;
}

.projectCardBottom .viewProjectText a:hover {
  text-decoration: underline;
  color: #7c0d0d;
}

.projectCardBottom .viewProjectText a {
  text-decoration: none;
  color: black;
}

.svgIconAndLink {
  position: relative;
  left: 100px;
  bottom: 15px;
}

.sourceCode {
  position: relative;
  left: 100px;
  top: 60px;
  font-size: 10px;
  font-weight: bold;
}

.slider {
  overflow: hidden;
}
.slider figure {
  position: relative;
  width: 400%;
  margin: 0;
  left: 0;
  animation: 40s slider infinite;
}
.slider figure img {
  float: left;
  width: 25%;
  height: 280px;
  transform: scale(0.9);
}

@keyframes slider {
  0% {
    left: 0;
  }
  20% {
    left: 0;
  }
  25% {
    left: -100%;
  }
  45% {
    left: -100%;
  }
  50% {
    left: -200%;
  }
  70% {
    left: -200%;
  }
  75% {
    left: -300%;
  }
  95% {
    left: -300%;
  }
  100% {
    left: -300%;
  }
}

/* responsiveness for project cards */

@media only screen and (max-width: 1000px) {
  .projectsContainer {
    display: flex;
    flex-wrap: wrap;
  }
}

.projectCard {
  width: 300px;
  min-height: 500px;
  box-shadow: 5px 5px 20px grey;
  margin: 20px;
  background-color: #eff5ff;
  align-self: flex-start;
}

.projectCard h3 {
  font-size: 20px;
  margin: 8px 0;
}

.project-link:hover {
  color: #7c0d0d;
}

.gitHubIconProjects {
  width: 20%;
  color: #000;
}
/* ... */

